service.yaml
apiVersion: v1
kind: Service
metadata:
  name: responder
spec:
  selector:
    app: responder
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
