ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: responder
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - http:
      paths:
      - path: /responder
        backend:
          serviceName: responder
          servicePort: 80
